fix spacing for remove button

--- a/css/inner/edit-project-settings.less
+++ b/css/inner/edit-project-settings.less
@@ -261,6 +261,7 @@ form.expando {
       display: block;
       overflow: hidden;
       white-space: nowrap;
+      margin-left: auto;
       > i {
         padding: 1em;
         padding-left: 6.5em;
